# positWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  positWrapperC.cpp  positWrapperC.h  positWrapperPybind.cpp  setup.py  setup.sh  test.cpp  test.py
include/: positWrapperC.h
src/: CMakeLists.txt  positWrapperC.cpp  positWrapperPybind.cpp
test/: CMakeLists.txt  test.cpp  test.py  test_math.cpp
